k8s/my-app.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squad4-meme-generator
spec:
  replicas: 1
  selector:
    matchLabels: 
      app.kubernetes.io/instance: squad4-meme-generator
      app.kubernetes.io/name: squad4-meme-generator
  template: 
    metadata:
      labels:
        app.kubernetes.io/instance: squad4-meme-generator
        app.kubernetes.io/name: squad4-meme-generator
    spec:
      containers:
      - name: squad4-meme-generator
        image: quay.io/levandrejev/squad4-meme-generator:<TODO>
